# 2025-05-25-django

./: Dockerfile  README.md  docker-compose.yaml  pyproject.toml
config/: settings.py  urls.py
musicbox/: models.py  urls.py  views.py
musicbox/migrations/: 0001_initial.py  0002_song.py  0003_alter_song_playlist.py
musicbox/templates/: create_playlist.html  index.html  playlist_info.html
