[project]
name = "musicbox"
version = "0.0.0.1"
description = "An app to manage your playlists"
authors = [
    {name = "Eduard Litvinchuk",email = "litvinchuckeduard@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django (>=5.2.1,<6.0.0)",
    "psycopg[binary] (>=3.2.9,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
